* Stimulus Controllers added * Migration added for Uniqueness of UserProject each Record * controllers modified and Controller Concerns Modified for Rubocop * Models modified Accordingly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     build: .
     command: "./bin/rails server"
     environment:
-      - POSTGRES_HOST=db
+      - POSTGRES_HOST=localhost
       - POSTGRES_DB=bugzilla_production
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=test123
