--- a/config/database.yml
+++ b/config/database.yml
@@ -10,9 +10,15 @@ default: &default
 development:
   <<: *default
   database: bugzilla_development
+  username: root
+  password: test123
+  host: localhost
 test:
   <<: *default
   database: bugzilla_test
+  username: root
+  password: test123
+  host: localhost
   
 production:
   <<: *default
